namespace DOMAIN.Features.Usuarios
{
    public class UserDVH
    {
        public int Id { get; set; }
        public string DVH { get; set; }
    }
}
